Fix displaying homepage on safari

--- a/site/_sass/_layout.scss
+++ b/site/_sass/_layout.scss
@@ -159,6 +159,7 @@
 }
 
 .homepage-blocks {
+  display: -webkit-box;
   display: flex;
   width: 100%;
   flex-direction: row;
